Fixed scrollbar-Y

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .ifr-principal {
-  width: 100vw;
+  width: 100%;
   height: 90vh;
   position: relative;
 }
@@ -32,7 +32,7 @@
 footer {
   background-color: #2f4676;
   width: 100%;
-  height: 10vh;
+  height: 9.3vh;
   padding: 20px;
   font-weight: bold;
   color: white;
